--- a/style.css
+++ b/style.css
@@ -84,6 +84,8 @@ hr#logo-line {
     text-shadow: 5px 5px 15px rgba(255, 255, 255, .8);
     -webkit-text-shadow: 5px 5px 15px rgba(255, 255, 255, .8);
     opacity: 0.3;
+    text-align: center;
+    max-width: 95%;
 }
 
 #typewrite::first-letter {
